# CodeGuardian

./: .gitignore  .gitleaks.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/agents/: accessibility.py  ai_reviewer.py  architecture.py  base.py  devops.py  documentation.py  performance.py  registry.py  security.py  testing.py
backend/app/api/: auth.py  deps.py
backend/app/api/routes/: analyze.py  dashboard.py  feedback.py  health.py  metrics.py  webhooks.py
backend/app/chat/: ratelimit.py  service.py
backend/app/core/security/: rbac.py  redaction.py  replay_redis.py  sandbox.py  webhook.py
backend/app/dashboard/: audit.py  store.py
backend/app/db/: base.py  models.py  session.py
backend/app/domain/: explainability.py  findings.py
backend/app/feedback/: learner.py  store.py
backend/app/github/: auth.py  client.py
backend/app/llm/: base.py  errors.py  prompting.py  router.py
backend/app/llm/providers/: claude.py  deepseek.py  fake.py  gemini.py  ollama.py  openai.py
backend/app/memory/: extract.py  service.py  types.py
backend/app/memory/graph/: base.py  inmemory.py  neo4j_store.py
backend/app/memory/vector/: base.py  embedding.py  inmemory.py  qdrant_store.py
backend/app/middleware/: metrics.py  request_id.py
backend/app/observability/: cost.py  metrics.py  tracing.py
backend/app/patch/: generator.py
backend/app/publish/: publisher.py
backend/app/review/: consensus.py  diff.py  graph.py  scoring.py  state.py  triage.py
backend/app/schemas/: github.py
backend/app/web/: index.html
backend/app/worker/: celery_app.py  enqueue.py  pipeline.py  tasks.py
backend/evals/: __init__.py  __main__.py  dataset.py  metrics.py  runner.py
backend/examples/: demo_memory.py  demo_review.py  review_demo_repo.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: conftest.py  test_agents.py  test_agents_phase2.py  test_analyze.py  test_audit.py  test_auto_approve.py  test_chat.py  test_config.py  test_consensus_and_scoring.py  test_dashboard.py  test_diff.py  test_evals.py  test_explainability.py  test_feedback.py  test_github_auth.py  test_health.py  test_llm_budget_and_prompting.py  test_memory_graph.py  test_memory_integration.py  test_memory_service.py  test_memory_vector.py  test_multimodel_router.py  test_observability.py  test_orchestrator.py  test_patch.py  test_prompt_injection.py  test_publisher.py  test_rbac_and_isolation.py  test_redaction.py  test_sandbox.py  test_tenant_isolation_invariant.py  test_triage.py  test_webhook_enqueue.py  test_webhook_security.py
demo-repo/: Dockerfile  README.md  app.py
docs/: CodeGuardian-AI-PRD.md  SECURITY-CHECKLIST.md  THREAT-MODEL.md
frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.tsx
frontend/src/api/: client.ts
frontend/src/components/: StatCard.tsx
frontend/src/views/: CostAnalytics.tsx  Overview.tsx
infra/: docker-compose.yml
infra/grafana/: codeguardian-dashboard.json
infra/sandbox/: Dockerfile  seccomp.json
